# controllers/otp-updatePasswordController.js
@@ -2,6 +2,8 @@ import { PrismaClient } from "@prisma/client";
 import speakeasy from "speakeasy";
 import sendEmail from "../utils/sendEmail.js";
 import bcrypt from "bcryptjs";
+import otpTemplate from "../utils/otpTemplate.js"
+import successPasswordTemplate from "../utils/successPasswordTemplate.js";
 
 const prisma = new PrismaClient();
 
@@ -26,11 +28,19 @@ export const generateOtp = async (req, res) => {
 
     // Set OTP expiration time (e.g., 30 minutes)
     const expiresAt = new Date(Date.now() + 30 * 60 * 1000);
+    // await sendEmail(
+    //   email,
+    //   "reset password",
+    //   `Dear Client, You have requested to reset your password for your GOYA (Go Young Africa) account. To complete this process, please use the following OTP (One-Time Password): OTP: ${otp}. If you did not request a password reset, please ignore this email or contact our support team immediately. Warm regards, The GOYA Team`,
+    //   null
+    // );
+    const subject = "OTP for Password Reset";
+    const htmlContent = otpTemplate(otp);
     await sendEmail(
       email,
-      "reset password",
-      `Dear Client, You have requested to reset your password for your GOYA (Go Young Africa) account. To complete this process, please use the following OTP (One-Time Password): OTP: ${otp}. If you did not request a password reset, please ignore this email or contact our support team immediately. Warm regards, The GOYA Team`,
-      null
+      subject,
+      null,
+      htmlContent
     );
     // Save OTP details to the database
     const otpRecord = await prisma.oTP.create({
@@ -54,7 +64,7 @@ export const generateOtp = async (req, res) => {
 export const validateAndVerifyOtp = async (req, res) => {
   try {
     const { otp } = req.query;
-console.log(otp);
+    console.log(otp);
     // Find OTP record in the database
     const otpRecord = await prisma.oTP.findFirst({
       where: {
@@ -77,7 +87,7 @@ console.log(otp);
       token: otp,
       window: 1,
     });
-console.log(verified);
+    console.log(verified);
     if (verified) {
       // Delete OTP record from the database after successful validation
       await prisma.oTP.delete({
@@ -117,10 +127,18 @@ export const updatePassword = async (req, res) => {
         message: "use password which is not your currently  password",
         data: null,
       });
+    // await sendEmail(
+    //   email,
+    //   "Dear Client, Your password has been successfully updated for your GOYA (Go Young Africa) account. You can now use your new password to log in to your account. If you did not request this change or if you encounter any issues, please contact our support team immediately. Warm regards, The GOYA Team",
+    //   null
+    // );
+    const subject = "Password Successfully Updated";
+    const htmlContent = successPasswordTemplate();
     await sendEmail(
       email,
-      "Dear Client, Your password has been successfully updated for your GOYA (Go Young Africa) account. You can now use your new password to log in to your account. If you did not request this change or if you encounter any issues, please contact our support team immediately. Warm regards, The GOYA Team",
-      null
+      subject,
+      null,
+      htmlContent
     );
     const newPassword = await bcrypt.hash(password, 10);
     const updatedPassword = await prisma.user.update({
